name:                c
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
                     , a == 0.1.*
                     , b == 0.1.*
  default-language:    Haskell2010
