name:                d
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
                     , a
                     , b >= 0.1 && < 0.2
  default-language:    Haskell2010
